Feature: changed boot 3 to boot 2